--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <link rel="pdf" href="Aufgabe1/Sammelmappe2.pdf">
+    <a href="/Aufgabe1/Sammelmappe2.pdf">Aufgabe 1</a>
 </body>
 </html>
