--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <a href="https://github.com/VinniPoo/IFD/Aufgabe1/Sammelmappe2.pdf">Aufgabe 1</a>
+    <a href="https://vinnipoo.github.io/IFD/Aufgabe1/Sammelmappe2.pdf">Aufgabe 1</a>
 </body>
 </html>
