--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <a href="https://vinnipoo.github.io/IFD/Aufgabe1/Sammelmappe2.pdf">Aufgabe 1</a>
+    <a href="https://vinnipoo.github.io/IFD/Aufgabe1/Sammelmappe2.pdf">Aufgabe 1</a> <br>
     <a href="https://vinnipoo.github.io/IFD/Aufgabe2/LowFidPrototyp.pdf">Aufgabe 2</a>
 </body>
 </html>
