--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 </head>
 <body>
     <h1>Hello World</h1>
-    <a href="https://vinnipoo.github.io/IFD/Aufgabe1/Sammelmappe2.pdf">Aufgabe 1</a> <br>
+    <a href="https://vinnipoo.github.io/IFD/Aufgabe_01/Der_Märchenweg.pdf">Aufgabe 1</a> <br>
 </body>
 </html>
